# Copyright 2026 JT Perry
# Licensed under Apache 2.0

[project]
name = "claude-runpod-proxy"
version = "0.1.0"
description = "A cost-effective proxy for Claude Code to RunPod Serverless"
authors = [{name = "JT Perry"}]
requires-python = ">=3.12"
dependencies = [
    "litellm[proxy]>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
managed = true